data/derived/comb/progs/unify/prog8431.ml.out
Characters 29-54:
  let stringOfList f l = "[" ^ sepConcat  (List.map f l) ^ "]";;
                               ^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type string list -> string
       but an expression was expected of type string
